[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flask-masonite"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your-email@example.com"},
]
description = "A Masonite-inspired routing and controller engine for Flask applications"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "Flask>=2.0.0",
    "Flask-SQLAlchemy>=3.0.0",
    "Flask-Marshmallow>=0.15.0",
    "Flask-Bcrypt>=1.0.0",
    "Flask-Mail>=0.9.0",
    "Flask-Login>=0.6.0",
    "Flask-JWT-Extended>=4.0.0",
    "Flask-Migrate>=4.0.0",
    "Flask-CORS>=4.0.0",
    "python-dotenv>=1.0.0",
    "WTForms>=3.0.0",
    "Marshmallow>=3.0.0",
    "bcrypt>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/YOUR_GITHUB_USERNAME/flask-masonite"
Repository = "https://github.com/YOUR_GITHUB_USERNAME/flask-masonite"

[tool.setuptools.packages.find]
where = ["."]
include = ["flask_masonite*"]

[tool.setuptools.package-data]
flask_masonite = ["libs/**/*"]

[project.scripts]
flask-masonite = "flask_masonite.cli:cli"